--- a/public/Style.css
+++ b/public/Style.css
@@ -59,11 +59,13 @@ input{
 }
 
 button{
-    background: #575ed8;
+    background: #eb3ca2;
     color: #fff;
     font-size: 18px;
     border: 0;
     padding: 12px 0;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
+    width: 40%;
+    border-radius: 1rem;
+    margin: 2rem;
+    margin-left: 12rem;
 }
