--- a/public/Style.css
+++ b/public/Style.css
@@ -1,25 +1,77 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@300;400&display=swap');
 body{
-    font-family: 'Nunito';
+    font-family: 'Poppins','Nunito';
+    overflow: hidden;
 }
-
+.bodyx{
+    width: 100vw;
+    height: 100vh;
+     position: relative;
+     padding: 0%;
+}
+.bodyx::after{
+    content: '';
+    top: 2%;
+    left: 5%;
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    color: #eb3ca2;
+    /* clip-path: circle(0 0 at right); */
+    background-image: linear-gradient(120deg, #eaee44, #33d0ff);
+    border-radius: 0% 100% 0% 100% / 0% 100% 0% 100%  ;
+    z-index: -2;
+}
+.bodyx::before{
+    content: '';
+    top: 2%;
+    left: 5%;
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    color: #eb3ca2;
+    /* clip-path: circle(0 0 at right); */
+    background-image: linear-gradient(120deg, #eaee44, #33d0ff);
+    border-radius: 100% 0% 100% 0% / 100% 0% 100% 0%  ;
+    z-index: -2;
+}
 h2{
     font-size: 18px;
     padding: 10px 20px;
     color: #575ed8;
 }
-
+.main{
+    text-align: center;
+    font-weight: 400;
+    font-size: 1.8rem;
+    padding: 0%;
+    margin: 0%;
+}
 #mario-chat{
     max-width: 600px;
-    margin: 30px auto;
+    margin: 1px auto;
     border: 1px solid #ddd;
     box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
     border-radius: 2px;
+    background: rgba( 255, 255, 255, 0.35 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 5px );
+-webkit-backdrop-filter: blur( 5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+
 }
 
 #chat-window{
     height: 400px;
     overflow: auto;
     background: #f9f9f9;
+    background: rgba( 255, 255, 255, 0.35 );
+
+/* backdrop-filter: blur( 5px ); */
+/* -webkit-backdrop-filter: blur( 5px ); */
+/* border-radius: 10px; */
+
 }
 
 #output p{
@@ -54,7 +106,7 @@ input{
     width: 100%;
     background: #fff;
     border-bottom: 1px solid #eee;
-    font-family: Nunito;
+    /* font-family: 'Poppins'; */
     font-size: 16px;
 }
 
@@ -63,9 +115,9 @@ button{
     color: #fff;
     font-size: 18px;
     border: 0;
-    padding: 12px 0;
+    padding: 8px 0;
     width: 40%;
     border-radius: 1rem;
-    margin: 2rem;
+    margin: 1rem;
     margin-left: 12rem;
 }
